MAJ doc resultat et delete parcours
